FusionDev Backup1/src/objects/Delivery_Lines__c.object
<CustomObject>
    <fields>
        <fullName>Deliveries__c</fullName>
        <label>Deliveries</label>
        <referenceTo>Deliveries__c</referenceTo>
        <relationshipLabel>Delivery Lines</relationshipLabel>
        <relationshipName>Delivery_Lines10</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ERP_Order__c</fullName>
        <label>ERP Order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Change_Time__c</fullName>
        <label>Last Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Need_By_Date__c</fullName>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pack_Line_Num__c</fullName>
        <label>Pack Line Num</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <label>Part Description</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_Ordered__c</fullName>
        <label>QTY Ordered</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTY_Shipped__c</fullName>
        <label>QTY Shipped</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_By_Date__c</fullName>
        <label>Ship By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <label>Ship Via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC__c</fullName>
        <label>UPC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warehouse__c</fullName>
        <label>Warehouse</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Delivery Lines</label>
    <nameField>
        <label>Delivery Lines Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>